# stratslab

./: .claude_setup_notes.md  .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: settings.json
.claude/commands/: README.md  adw.md  bug.md  chore.md  feature.md  implement.md  install.md  prime.md  refactor.md  research.md  review.md  test.md
.claude/templates/: bug-spec.md  chore-spec.md  feature-spec.md  refactor-spec.md  research-spec.md  test-spec.md
adws/adw_modules/: api_integration.py  database_ops.py  error_recovery.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_workflow_tables.py
docs/: AGENTIC_WORKFLOW.md
scripts/: copy_dot_env.sh  docker.sh  run_adw.sh  setup_adw.sh  start.sh  test.sh  validate.sh
specs/: README.md
specs/features/: docker-containerization.md  environment-separation.md  full-agentic-workflow.md  swagger-api-documentation.md
stratslabapi/: __version__.py
stratslabapi/apps/: fastapi.py
stratslabapi/core/: __init__.py  _settings.py
stratslabapi/dependencies/: auth.py
stratslabapi/helpers/: hashers.py  jwt.py  pydantic.py
stratslabapi/middlewares/: cors.py  counter.py  secure.py
stratslabapi/repositories/: _base.py  auth_models.py  models.py  session.py  workflow_models.py
stratslabapi/routers/: __init__.py  webhooks.py  workflows.py
stratslabapi/schemas/: auth.py  workflows.py
stratslabapi/utils/: __init__.py  _compat.py
stratslabapi/web_servers/: asgi.py
